# cpp_primer_learn

./: .gitignore  CMakeLists.txt  README.md  cmaketest.cpp  exception  exception.cpp  exception2  exception2.cpp  forcecast.cpp  functionret.cpp  multipledeclare.cpp  overload_funname  overload_funname.cpp  overload_scope  rangefor  rangefor.cpp  ref2function.cpp  returnlist  returnref  returnref.cpp  test  trailreturn  vowelcount.cpp
.cache/clangd/index/: aggregate_class.cpp.58D44C184C97731D.idx  aggregate_class.hpp.E8DFC33929942E59.idx  algorirhm.cpp.9B07D276DDAB7560.idx  associative.cpp.63C03971B298A9B6.idx  calculate_phi.cpp.3F45A7886BD8394A.idx  cmaketest.cpp.E3AF46FB3135B3C2.idx  constexpr.cpp.0A4C05954025F0E7.idx  constexpr.hpp.77AD20AA8C2950FC.idx  constructor.cpp.AB7CD51502D4EBB3.idx  constructor.hpp.3EE732D72F754D9A.idx  container_test.cpp.6FEE65B5054CFF5F.idx  dynamic_mem.cpp.FF6637D980BD5E1E.idx  exception.cpp.0D93B2F161310E80.idx  exception2.cpp.FBF2B994AADEACFB.idx  exception_deep.cpp.422FEA79D71711F7.idx  file_iostream.cpp.C6EDF669A6AFBA63.idx  forcecast.cpp.83343AF64AB4B08B.idx  func_matching.cpp.5BB952B9079BB05D.idx  functionret.cpp.920A59EFDD5DB7B7.idx  inherit.cpp.D6B6370D665BE705.idx  inherit.hpp.DEDC33D1EBBC3699.idx  iterator.cpp.783E78AF0C935BDC.idx  lambda.cpp.C005810C9C1ED3A2.idx  main.cpp.1821D54DE9E3C545.idx  main.cpp.5DCE166BF13BCB04.idx  main.cpp.5DECAC748B1C5F73.idx  main.cpp.7179116417EDAC99.idx  main.cpp.C01A19F68E37A5B9.idx  main.cpp.C28609031D3EC9E4.idx  main.cpp.FD00F8100C154A4E.idx  multipledeclare.cpp.DBC30818E3352E22.idx  (+23 more)
contest/: 266A  266A.cpp  492B  492B.cpp  640C  640C.cpp
contest/CR924/: A  A.cpp  B  B.cpp
contest/t-cR1/: A  A.cpp  B  B.cpp  C  C.cpp
include/: RTTI.hpp  aggregate_class.hpp  async.hpp  constexpr.hpp  constructor.hpp  generator.hpp  inherit.hpp  sale_item.hpp  screen_window.hpp  static_member.hpp  strBlob.hpp  template_first.hpp
src/: RTTI.cpp  aggregate_class.cpp  algorirhm.cpp  algorirhm_find.cpp  associative.cpp  async.cpp  boost_test.cpp  calculate_phi.cpp  chrono_test.cpp  cmaketest.cpp  co_test.cpp  container_test.cpp  dynamic_mem.cpp  exception.cpp  exception2.cpp  exception_deep.cpp  file_iostream.cpp  forcecast.cpp  func_matching.cpp  functionret.cpp  iterator.cpp  iwyu_test.cpp  kmp.cpp  lambda.cpp  mem_pointer.cpp  multipledeclare.cpp  noexcept.cpp  output_buffer.cpp  overload_default.cpp  overload_funname.cpp  overload_scope.cpp  passbyref.cpp  rangefor.cpp  ref2function.cpp  returnlist.cpp  returnref.cpp  rvalue_lifetime.cpp  smartptr.cpp  stl_gen.cpp  stream_error.cpp  (+6 more)
src/constexpr/: constexpr.cpp  main.cpp
src/constructor/: constructor.cpp  main.cpp
src/file_iostream/: main.cpp
src/generator/: main.cpp
src/inherit/: inherit.cpp  main.cpp
src/inline_test/: unit1.cpp  unit2.cpp
src/sale_item/: main.cpp  sale_item.cpp
src/screen_window/: main.cpp  screen_window.cpp
src/static_member/: main.cpp  static_member.cpp
src/strBlob/: main.cpp
test_file/: file2  test_data
test_file/write/: base
